# Devops____Laba2

./: .gitignore  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: bandit.yml  cd.yml  ci.yml
app/: main.py
app/admin/: test_service.py
app/auth/: dependencies.py  utils.py
app/credentials/: router.py
app/pdf_to_audio/: dto.py  router.py  service.py
app/project/: router.py  test_service.py
app/shared/config/: env.py
app/shared/utils/: cbor.py
app/submission/: repository.py  router.py  service.py  test_service.py
db/migrations/: 20251122141512_create_conversions_table.sql  20251122143714_drop_secrets_table.sql
k8s/: ingress.yaml  leader.yaml  postgres.yaml  redis.yaml
locust/: README.md  common.py  env  locustfile.py  run
locust/core/: __init__.py  shapes.py  users.py
