[project]
name = "hearmypaper-server"
version = "1.0.0"
description = "HearMyPaper server"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cbor2>=5.7.0",
    "cryptography>=45.0.7",
    "fastapi[standard]>=0.116.1",
    "langdetect>=1.0.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.2",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "locust>=2.41.6",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "ruff>=0.13.1",
]
